--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,18 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
             <version>2.5.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.5.0</version>
+        </dependency>
         <!-- kafka客户端依赖 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -69,11 +78,7 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-            <version>2.5.0</version>
-        </dependency>
+
 
     </dependencies>
 
